# AutoDataSetBuilder

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_SETUP_SUMMARY.md  README.md  docker-compose.yml  feature-experiment-deterministic.bundle  psycopg2.py  pyproject.toml
.github/workflows/: ci.yml  release.yml  security.yml
ci/: pipeline.yml
docs/: README.md  architecture.md  conf.py  deployment.md  getting_started.rst  index.rst
docs/api/: autods.ingest.rst  autods.labeling.rst  autods.preprocess.rst  autods.shard.rst
examples/: example_ingest_and_preprocess.py  example_labeling.py  example_sharding.py  run_demo.sh
infra/airflow/dags/: auto_dataset_dag.py
psycopg2/: __init__.py
research/: Dockerfile  README.md  experiment.py
sdk/: psycopg2.py
sdk/autods/: __init__.py  ingest.py  labeling.py  preprocess.py
services/ingest_service/: Dockerfile  __init__.py  app.py
services/sharder/: create_shards.py
tests/: conftest.py  test_ingest.py  test_ingest_service.py  test_labeling.py  test_preprocess.py
